<resources>
    <string name="app_name">Metrorex App</string>
    <string name="id_statie">ID statie</string>
    <string name="id_magistrala">ID linie</string>
    <string name="baie">Baie(true/false)</string>
    <string name="mancare">Mancare(true/false)</string>
    <string name="id_vecin1">ID vecin1</string>
    <string name="id_vecin2">ID vecin2</string>
    <string name="id_vecin3">ID vecin 3</string>
    <string name="adaugare_statie">Adaugare statie</string>
    <string name="nume">Nume</string>
    <string name="nume_statie">Nume statie</string>
    <string name="nume_magistrala">Nume linie</string>
    <string name="adaugare_magistrala">Adaugare linie</string>
    <string name="timp_legatura_schimbare">Timp legatura/schimbare</string>
    <string name="adaugare_legatura_schimbare">Adaugare legatura/schimbare</string>
    <string name="intervalul_orar">Intervalul orar</string>
    <string name="timp_asteptare">Timp asteptare</string>
    <string name="adaugare_timpi_asteptare">Adaugare timpi asteptare</string>
    <string name="tabela_introducere_date">Tabela introducere date(STATII/LEGATURI)</string>
    <string name="tabela">Tabela</string>
    <string name="tabela_introducere_date_timpi_asteptare">Tabela introducere date</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="alege1">Alegeti statia de pornire</string>
    <string name="alege2">Alegeti destinatia</string>
    <string name="open">Open</string>
    <string name="close">Open</string>
    <array name="statii">
        <item>STRAULESTI</item>
        <item>LAMINORULUI</item>
        <item>PARC BAZILESCU</item>
        <item>JIULUI</item>
        <item>1 MAI</item>
        <item>GRIVITA</item>
        <item>BASARAB</item>
        <item>GARA DE NORD</item>
        <item>PIPERA</item>
        <item>AUREL VLAICU</item>
        <item>AVIATORILOR</item>
        <item>PIATA VICTORIEI</item>
        <item>PIATA ROMANA</item>
        <item>UNIVERSITATE</item>
        <item>PIATA UNIRII</item>
        <item>TINERETULUI</item>
        <item>EROII REVOLUTIEI</item>
        <item>CONSTANTIN BRANCOVEANU</item>
        <item>PIATA SUDULUI</item>
        <item>APARATORII PATRIEI</item>
        <item>DIMITRIE LEONIDA</item>
        <item>BERCENI</item>
        <item>PRECIZIEI</item>
        <item>PACII</item>
        <item>GORJULUI</item>
        <item>LUJERULUI</item>
        <item>POLITEHNICA</item>
        <item>EROILOR</item>
        <item>IZVOR</item>
        <item>TIMPURI NOI</item>
        <item>MIHAI BRAVU</item>
        <item>DRISTOR</item>
        <item>NICOLAE GRIGORESCU</item>
        <item>1 DECEMBRIE 1918</item>
        <item>NICOLAE TECLU</item>
        <item>ANGHEL SALIGNY</item>
        <item>PANTELIMON</item>
        <item>REPUBLICA</item>
        <item>COSTIN GEORGIAN</item>
        <item>TITAN</item>
        <item>PIATA MUNCII</item>
        <item>PIATA IANCULUI</item>
        <item>OBOR</item>
        <item>STEFAN CEL MARE</item>
        <item>PETRACHE POENARU</item>
        <item>CRANGASI</item>
        <item>GROZAVESTI</item>
        <item>ACADEMIA MILITARA</item>
        <item>ORIZONT</item>
        <item>FAVORIT</item>
        <item>TUDOR VLADIMIRESCU</item>
        <item>PARC DRUMUL TABEREI</item>
        <item>ROMANCIERILOR</item>
        <item>VALEA IALOMITEI</item>
        <item>CONSTANTIN BRANCUSI</item>
        <item>RAUL DOAMNEI</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acasa">BUN VENIT!</string>
    <string name="profil">PROFIL</string>
    <string name="prenume">Prenume</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="register_now">Register now!</string>
    <string name="do_you_have_account_login_here">Do you have account? Login here</string>
    <string name="welcome">WELCOME</string>
    <string name="acasaaaaa">ACASA</string>
    <string name="ruteeee">RUTE</string>
    <string name="deconectareeeeee">DECONECTARE</string>
    <string name="introducetiEmail">Introduceti email-ul!</string>
    <string name="introducetiParola">Introduceti parola!</string>
    <string name="introducetiNume">Introduceti nume!</string>
    <string name="introducetiPrenume">Introduceti prenume!</string>
    <string name="introducetiEmailCorect">Email-ul nu este valid!</string>
    <string name="existaEmailul">Exista deja un cont cu acest email. Mergi la login!</string>
    <string name="Username">Nume utilizator</string>
    <string name="introducetiUsername">Introduceti nume utilizator!</string>
    <string name="utilizatorInexistent">Nume de utilizator inexistent.</string>
    <string name="parolaGresita">Parola incorecta.</string>
    <string name="existaUser">Utilizator existent.</string>
    <string name="retine_numele_si_parola">Retine numele si parola</string>
    <string name="abonamente">Abonamente studenti/elevi</string>
</resources>