<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adaugare_legaturi_schimbari"
    android:orientation="vertical">



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_vecin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_vecin1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/id_vecin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_vecin2" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/timp_legatura_schimbare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timp_legatura_schimbare" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tabela_introducere_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tabela_introducere_date" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adaugare_legatura_schimbare"
        />
</LinearLayout>