<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="HOME">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/home"
                android:title="@string/acasaaaaa" />
            <item
                android:id="@+id/profile"
                android:icon="@drawable/profile"
                android:title="@string/profil"/>
            <item
                android:id="@+id/rute"
                android:icon="@drawable/route"
                android:title="@string/ruteeee"
                android:textColor="@color/color7"/>
            <item android:id="@+id/deconectare"
                android:icon="@drawable/logout_mov"
                android:title="@string/deconectareeeeee"
                />
        </menu>
    </item>
    <item android:title="MAGISTRALE">
        <menu>
            <item
                android:id="@+id/m1"
                android:icon="@drawable/subway_yellow"
                android:title="DRISTOR-PANTELIMON"/>
            <item
                android:id="@+id/m2"
                android:icon="@drawable/subway_blue"
                android:title="BERCENI-PIPERA" />
            <item
                android:id="@+id/m3"
                android:icon="@drawable/subway_red"
                android:title="PRECZIIEI-ANGHEL SALIGNY" />
            <item
                android:id="@+id/m4"
                android:icon="@drawable/subway_green"
                android:title="GARA DE NORD-STRAULESTI" />
            <item
                android:id="@+id/m5"
                android:icon="@drawable/subway_orange"
                android:title="RAUL DOAMNEI-EROILOR" />
        </menu>
    </item>
</menu>