<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdaugareMagistrala"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_id_magistrala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_magistrala" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nume_magistrala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nume_magistrala" />

    <Button
        android:id="@+id/btn_adaugare_magistrala"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adaugare_magistrala"
        />



</LinearLayout>